# coins

./: .stylish-haskell.yaml  coins.cabal
.devcontainer/: Dockerfile  devcontainer.json
src/: Feed.hs  Interface.hs  Main.hs
src/Core/: Coins.hs  Exceptions.hs  Types.hs
src/Feed/Binance/: Feed.hs  Types.hs
src/Feed/Bittrex/: Feed.hs  Types.hs
src/Feed/Coinbase/: Feed.hs  Types.hs
src/Feed/Poloniex/: Feed.hs  Types.hs
src/Interface/: Draw.hs  Event.hs  State.hs  Theme.hs
src/Interface/Draw/: Balances.hs  Common.hs  Exceptions.hs  Markets.hs  Opportunities.hs  Transactions.hs
